# shuller_bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.sh  docker-compose.yml
.github/workflows/: docker.yaml
src/: boop.rs  help.rs  image_board.rs  main.rs  paginate.rs  phrazes.rs  rule34.rs  waifu.rs
src/rule34/: image_board.rs  paginate.rs
src/waifu/: paginate.rs  post.rs  tab.rs
