[package]
name = "shuller_bot"
version = "0.1.1"
edition = "2021"

[dependencies]
anime-grubber = "0.0.4"
poise = "0.6.1"
serenity = { version = "0.12.2", features = ["tokio_task_builder"] }
shuller = { version = "2.0.6", features = ["full"] }
time = "0.3.36"
tinyrand = "0.5.0"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"


[profile.dev]
opt-level = 1
debug = true

[profile.release]
strip = true
opt-level = 3
lto = true
debug = false
